--- a/findMyProperty/templates/home.html
+++ b/findMyProperty/templates/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div>
   {% for property in properties%}
-    <div class="card">
+    <div class="card mb-5">
       <div class="card-header">{{property.name}}</div>
       <div class="card-body">
         <h5 class="card-title">{{property.address}}, {{property.city}}, {{property.state}}, {{property.zipcode}}</h5>
