--- a/properties/templates/delete_property.html
+++ b/properties/templates/delete_property.html
@@ -1,4 +1,4 @@
-{% extends 'portfolio/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <h1>Delete</h1>
 <form action="" method="post">{% csrf_token %}
