Added description in the property cards

--- a/findMyProperty/templates/home.html
+++ b/findMyProperty/templates/home.html
@@ -16,7 +16,7 @@
       <div class="card-body">
         <h5 class="card-title">{{property.address}}, {{property.city}}, {{property.state}}, {{property.zipcode}}</h5>
         <p class="card-text">{{property.description}}</p>
-        <p class="card-text">{{property.seller.user.first_name}} {{property.seller.user.last_name}}</p>
+        <p class="card-text">Owner : {{property.seller.user.first_name}} {{property.seller.user.last_name}}</p>
         <a href="{% url 'properties:message_owner' propertyId=property.id %}" class="btn btn-primary">Contact owner</a>
         {% if user.is_authenticated and user.is_buyer %}
         <a href="{% url 'properties:property_pdf_email' pk=property.id %}" class="btn btn-primary">Email me more</a>
