--- a/properties/templates/view_messages_received.html
+++ b/properties/templates/view_messages_received.html
@@ -12,7 +12,7 @@
       <div class="card-body">
         <h5 class="card-title">{{propertyMessage.message}}</h5>
         <p class="card-text">You can reply to the sender of message @ {{propertyMessage.email}} or call {{propertyMessage.phone}}</p>
-        <a href="{% url 'properties:delete_property' pk=propertyMessage.id %}" class="btn btn-primary">Delete</a>
+        <a href="{% url 'properties:delete_message' pk=propertyMessage.id %}" class="btn btn-primary">Delete</a>
       </div>
     </div>
   {% endfor%}
